added final edits

--- a/Health/Presentation/ES218_Brown_FinalRmd.Rmd
+++ b/Health/Presentation/ES218_Brown_FinalRmd.Rmd
@@ -1,9 +1,23 @@
+---
+title: "ES218 Final Project (Health Data)"
+author: "Peter Brown"
+date: "5/4/2020"
+output: 
+  html_document:
+    code_folding: hide
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+```
+
+``` {r data preparation}
 library(dplyr)
 library(tidyr)
 library(ggplot2)
-library(tibble)
 library(USAboundaries)
 library(tmap)
+library(tibble) #need to load because add_column() requires it
 
 # Set working directory
 # Load the data (found in the repository, Health/data/...)
@@ -43,20 +57,18 @@ all.data <- inner_join(health.dat2, income.state, by = "Geo_STATE") %>%
 # Create New-England only data
 ne.dat <- all.data %>% 
   filter(State %in% c("Maine", "New Hampshire", "Vermont", "Massachusetts", "Connecticut", "Rhode Island")) %>% 
-           rename("state_name" = State)
+  rename("state_name" = State)
 
 # Create New England Counties
 attach(health.dat)
 ne.counties <- health.dat[order(Geo_FIPS), ]
 detach(health.dat)
 
+all.dat.rm <- all.data %>% 
+  select(Geo_STATE, State)
+
 ne.counties2 <- ne.counties %>%
-  filter(Geo_FIPS %in% c("9001", "9003", "9005", "9007" , "9009" , "9011" , "9013" , "9015", "23001", "23003", "23005", "23007", "23009", 
-                         "23011", "23013", "23015", "23017", "23019", "23021", "23023", "23025", "23027", "23029", "23031", "25001", "25003", 
-                         "25005", "25007", "25009", "25011", "25013", "25015", "25017", "25019", "25021", "25023", "25025", "25027", "33001", 
-                         "33003", "33005", "33007", "33009", "33011", "33013", "33015", "33017", "33019", "44001", "44003", "44005", "44007", 
-                         "44009", "50001", "50003", "50005", "50007", "50009", "50011", "50013", "50015", "50017", "50019", "50021", "50023", 
-                         "50025", "50027")) %>% 
+  filter(Geo_FIPS %in% c("9001", "9003", "9005", "9007" , "9009" , "9011" , "9013" , "9015", "23001", "23003", "23005", "23007", "23009", "23011", "23013", "23015", "23017", "23019", "23021", "23023", "23025", "23027", "23029", "23031", "25001", "25003", "25005", "25007", "25009", "25011", "25013", "25015", "25017", "25019", "25021", "25023", "25025", "25027", "33001", "33003", "33005", "33007", "33009", "33011", "33013", "33015", "33017", "33019", "44001", "44003", "44005", "44007", "44009", "50001", "50003", "50005", "50007", "50009", "50011", "50013", "50015", "50017", "50019", "50021", "50023", "50025", "50027")) %>% 
   select(Geo_STATE, Geo_NAME, Geo_QNAME, SE_T001_001, SE_T001_002, SE_T004_001, SE_T004_002,
          SE_T008_004, SE_T005_001, SE_NV003_001, SE_NV003_002, SE_NV006_004) %>% 
   rename("Physically Unhealthy Days per Month"                      = SE_T001_001,
@@ -78,20 +90,25 @@ ne.counties2 <- ne.counties %>%
                        "Rhode Island", "Rhode Island", "Vermont", "Vermont", "Vermont", "Vermont", "Vermont", "Vermont", "Vermont", 
                        "Vermont", "Vermont", "Vermont", "Vermont", "Vermont", "Vermont", "Vermont"))
 
-# ---- BEGIN ANALYSIS ----
+```
 
-# ---- Maps and Intro ----
+## Introduction
 
-# Create New England states only and shapefile
+As this project is being created during COVID-19 lockdown, the importance of mental health is a factor for many people around the globe. This inspired me to use this project to look into the relationship between mental health, mental healthcare access, and drug poisoning mortality in New England. Overall, what I find is that there is little to no relation between mental health and drug induced mortality. 
 
+## Methods
+
+The data were sourced from my class, as well as one .csv file containing state wide income levels that I grabbed from Wikipedia. I analyzed the data using several R packages. Dplr was used to manipulate and reform the data. Tmap and USAboundaries were used to create the maps in the document. Lastly, ggplot2 was used to create the figures.
+
+## Results and Discussion
+
+``` {r maps prep}
 ne.map <- us_states(states = c("Massachusetts", "Vermont", "Maine",
                                "New Hampshire", "Rhode Island",
                                "Connecticut"))
 
 ne.shp <- full_join(ne.map, ne.dat, by = "state_name")
 
-
-# Map household income
 tmap_options(max.categories = 6)
 
 income.map <- tm_shape(ne.shp, projection = 26919) + 
@@ -114,49 +131,66 @@ mentally_unhealthy.map <- tm_shape(ne.shp, projection = 26919) +
   tm_polygons("Mentally Unhealthy Days per Month",
               style = "quantile", n = 6, palette = "Purples") +
   tm_legend(outside = TRUE)
+```
 
+### Geographical Overview of Study Area
+
+```{r plot_maps, fig.align= "center"}
 # side-by-side maps (change figure size when knitting)
 tmap_arrange(income.map, drug.map, MHP.map, mentally_unhealthy.map, 
              nrow = 2, ncol = 2)
+```
 
-# ---- plot mean mental health per 100,000 and median income -------------------------------------------
+The above maps represent a graphical overview of New England states' statistics of factors that may be intertwined. In the following analysis I take a look at the relation between median household income, drug poisoning mortalities, number of mental health providers and the number of mentally unhealhy days by a person per month.
 
-ggplot(all.data, aes(x = `Medianhouseholdincome`, y = `MHP per 100,000 people`)) + geom_point() + xlab("Median Household Income") +
-  theme(axis.text.x = element_text(angle = 90))
+A first glance we can see some trends. First, despite Massachussets having relatively high income and the most mental health care providers (MHP) per 100,000 people, the state has high number of mentally unhealthy days aong citizens and high drug mortality rate. Maine on the other hand has the lowest median household income, a low amount of MHP per 100,000 people and low drug poisoning mortality rate. However, they have among the highest mentally unhelathy days per month. This prelimianry look at our data prompts a few questions that we can further explore. 
+
+The relation between access to mental health care and drug mortality rates is of particular interest. 
+
+### Drug Mortality Rate
+
+```{r qq plot 1, fig.align= "center"}
 
 # ---- qq-plot of all new england counties' drug mortality rate ----
 
 ggplot() + aes(sample = ne.counties2$`Drug Poisoning Mortality Rate`) + geom_qq(distribution = qnorm) + 
   geom_qq_line(line.p = c(0.25, 0.75), col = "red") + ylab("Drug Poisoning Mortality Rate") +
   ggtitle("Theoretical Q-Q Plot of New England Counties' Drug Poisoning Mortality Rates")
+```
 
-# plot against access to mental health care providers
+The theoretical q-q plot above shows that drug posioning mortality rates is fairly normally distributed across New England counties. There is slight tailing at both ends of the graph and the middle points don't follow the abline well, giving the points a slight "U" shape. This suggests that the data may be right-skewed.
 
+I am curious to see how drug poisoning mortality rate looks when plotted against access to mental health care. Or in this instance, the number of mental health care providers per 100,000 people.
+
+``` {r mhp drug plot, fig.align = "center"}
 ggplot(ne.counties2, aes(x = `Drug Poisoning Mortality Rate`, y = `MHP per 100,000 people`)) +
   geom_point() + stat_smooth(method = "loess", se = FALSE, span = 0.9)
+```
 
-# plot mentally unhealthy days against drugs
-ggplot(ne.counties2, aes(x = `Drug Poisoning Mortality Rate`, y = `Mentally Unhealthy Days per Month`)) +
-  geom_point()
+There appears to be no relation between access to mental health providers and drug poisoning mortality rates between New England counties. However, using a loess curve with a span of 0.9, we can see there is a parabolic relation between the two variables. However, given the wide span of the loess curve and the resulting shape of the curve, this is a rather weak relationship.
 
-# ---- Residuals for mental health provider and income----
-res <- lm(`MHP per 100,000 people` ~ Medianhouseholdincome, dat = all.data)
+At this point, lets take a step back and see if there is any relationshuip between income and access to mental health care providers nationwide.
 
-all.data$residuals <- residuals(res)                      
-
-ggplot(all.data, aes(x = Medianhouseholdincome, y = residuals)) + geom_point() +
-  stat_smooth(method = "loess", se = FALSE, span = 1, 
-              method.args = list(degree = 1) )
-
-
-
-
+``` {r income and mhp, fig.align = "center"}
 # Remove $ from medianhouseholdincome
 library(stringr)
 all.data <- all.data %>%  
   mutate( income = str_replace(Medianhouseholdincome, "\\$", ""),
-          income = str_replace(income, ",", ""),
-          income = as.numeric(income))
+                      income = str_replace(income, ",", ""),
+                      income = as.numeric(income))
 
 ggplot(all.data, aes(x = income, y = `MHP per 100,000 people`)) + geom_point() + xlab("Median Household Income") +
-  theme(axis.text.x = element_text(angle = 90))
+  theme(axis.text.x = element_text(angle = 90)) + stat_smooth(method = "loess", se = FALSE, span = 0.7)
+```
+
+There appears to be slight positive relation between the two variables. The two peaks suggest that there is a threshold for ranges of that data. Mental healthcare providers per 100,000 people increases as income increases. Until around \$47,000, at which point it slightly declines, before rising again around \$52,000.
+
+
+## Conclusion
+
+After several analyses of New England mental health variables, it appears there is no relation between mental health and drug poisoning mortality rate. However, analysis does show that there might be a correlation between income in a state and access to mental health care providers per 100,000 people.
+
+### REFERENCE: 
+
+R Core Team (2019). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna,   Austria. URL https://www.R-project.org/.
+
